# bevy-rs-rds

./: .gitignore  Cargo.toml  guide.md
assets/: README.md
scripts/: fetch_assets.sh
src/: cards.rs  events.rs  main.rs  resources.rs  states.rs
src/components/: mod.rs
src/systems/: card_selection.rs  game_over.rs  hud.rs  mod.rs
