[package]
name = "magic_duel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11",
    "default_font",
] }
# Temporarily remove audio to simplify build in this environment
#bevy_kira_audio = "0.16"
bevy_rapier2d = { version = "0.22", default-features = false, features = ["dim2", "debug-render-2d"] }
rand = "0.8"
